unpackaged/main/default/objects/Case/fields/CLI__c.field-meta.xml
<CustomField>
    <fullName>CLI__c</fullName>
    <formula>Service__r.cli__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLI</label>
    <type>Text</type>
</CustomField>