unpackaged/main/default/objects/Case/fields/CloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>CloseDateTime__c</fullName>
    <description>Case Closed Date and Time</description>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>