unpackaged/main/default/objects/Case/fields/QueryType__c.field-meta.xml
<CustomField>
    <fullName>QueryType__c</fullName>
    <description>Type of query case relates to</description>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Disconnection</fullName>
            </value>
            <value>
                <fullName>New Connection</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>