unpackaged/main/default/objects/Case/validationRules/Contact_Cannot_Be_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Cannot_Be_Inactive</fullName>
    <active>true</active>
    <description>For New Cases, Contact cannot be Inactive</description>
    <errorConditionFormula>AND(ISNEW()=true, Contact.Inactive__c = true)</errorConditionFormula>
    <errorMessage>Case Contact cannot be Inactive. Please associate the Case with an active Contact for the Account</errorMessage>
</ValidationRule>