unpackaged/main/default/objects/Case/listViews/QueueTest_Case.listView-meta.xml
<ListView>
    <fullName>QueueTest_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>QueueTest</label>
    <queue>QueueTest</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>