unpackaged/main/default/objects/Case/listViews/Support_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Support_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Cases</label>
    <queue>Support_Cases</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>