unpackaged/main/default/objects/Case/listViews/Unallocated_Cases.listView-meta.xml
<ListView>
    <fullName>Unallocated_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Unallocated Cases</label>
    <queue>Support_Cases</queue>
</ListView>